--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
     <script src="js/lib/mnemonic.js" defer></script> 
     <script src="js/lib/aes.js" defer></script> 
-    <script src="js/lib/bitcore-lib-patched.min.js" defer></script>
+    <script src="js/lib/bitcore-lib.min.js" defer></script>
     <script src="js/lib/biginteger.js" async></script>  
     
     <script src="js/lib/xcp-js/util.js" defer></script>    
