--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div style="margin: 0 20px 0 20px;">
           <div id="siteDisclaimer" class="alert alert-info alert-dismissible" role="alert">
               <button type="button" class="close" data-dismiss="alert" aria-label="Close" id="btn-DismissWarning"><span aria-hidden="true">&times;</span></button>
-              <strong>Disclaimer: </strong>This site is in active development. Report bugs to <a href="mailto:info@btcpaymarket.com">info@btcpaymarket.com</a> 
+              <strong>Disclaimer: </strong>This site is in active development. Report bugs to <a href="https://github.com/monaco-ex/btcpaymarket">the issue tracker on GitHub</a> 
       
 <!--              Source code available at <a href="https://github.com/loon3/btcpaymarket" target="_blank">https://github.com/loon3/btcpaymarket</a>-->
             </div>
@@ -233,8 +233,8 @@
 
 
           <div id="content-footer" align="center">
-            <div style='padding: 20px 0 10px 0;'><a class='white-link' href="https://github.com/loon3/btcpaymarket" target="_blank"><i class="fa fa-github fa-2x"></i></a></div>
-            <div style='font-weight: bold;'>BTCPAY Market v0.3.1</div>
+            <div style='padding: 20px 0 10px 0;'><a class='white-link' href="https://github.com/monaco-ex/btcpaymarket" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-2x"></i></a></div>
+            <div style='font-weight: bold;'>BTCPAY Market v0.3.1 (patched by Monco-ex.com)</div>
            
             <div class='small' style='padding: 10px 0 0 0;'>MONA/JPY Exchange Rate from BitBank</div>
           </div>
