Fix estimated time 3h to 30m.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <!--                  <div class="small">Refresh Window to Update</div>-->
 <!--                    <h5 style="text-decoration: underline">You MUST click on Pending Order Matches to complete your asset order</h5>-->
-                      <div class="small" align="center" style="font-style: italic">Pending Order Matches expire after 20 blocks (about 3 hours)</div>
+                      <div class="small" align="center" style="font-style: italic">Pending Order Matches expire after 20 blocks (about 30 minutes)</div>
 
 
                   </div>
