--- a/html/dialog-About.html
+++ b/html/dialog-About.html
@@ -14,8 +14,8 @@
     </div>
     <div style="padding-bottom: 25px">
         <p class="lead" align="left">How it Works</p>
-        <p align="left"><span style="font-weight: bold">Buying assets with <span class='BTC'>MONA</span></span> requires two transactions.  First, click on an Active Order in the Asset Market table (highlighted in yellow) to send an Order transaction.  After the Order transaction has confirmed, a Pending Order Match will appear in the Order Matches table.  Click on the Pending Order Match to send an Order Match transaction (BTCPAY) to complete your order.</p>
-        <p align="left"><span style="font-weight: bold">Selling assets for <span class='BTC'>MONA</span></span> only requires one transaction.  Click on the asset you wish to sell in the Assets menu then click the Sell button.  Sell orders expire after 6720 blocks (about 1 week) and appear in the Asset Market table highlighted in green.</p>
+        <p align="left"><span style="font-weight: bold">Buying assets with <span class='BTC'></span></span> requires two transactions.  First, click on an Active Order in the Asset Market table (highlighted in yellow) to send an Order transaction.  After the Order transaction has confirmed, a Pending Order Match will appear in the Order Matches table.  Click on the Pending Order Match to send an Order Match transaction (BTCPAY) to complete your order.</p>
+        <p align="left"><span style="font-weight: bold">Selling assets for <span class='BTC'></span></span> only requires one transaction.  Click on the asset you wish to sell in the Assets menu then click the Sell button.  Sell orders expire after 6720 blocks (about 1 week) and appear in the Asset Market table highlighted in green.</p>
     </div>
     <div style="padding-bottom: 25px">
         <p class="lead" align="left">Comments or Questions?</p>
