--- a/html/dialog-btcpay.html
+++ b/html/dialog-btcpay.html
@@ -12,10 +12,10 @@
         <div style="font-size: 24px"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'>BTC</span></div>
     -->
          <div>Asset Cost:</div> 
-         <div style="font-size: 24px; padding-bottom: 20px;"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'>BTC</span></div>
+         <div style="font-size: 24px; padding-bottom: 20px;"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'></span></div>
         <div>Network Fees:</div> 
-        <div style="font-size: 20px; padding-bottom: 20px;">0.0006 <span class='BTC'>BTC</span></div>
+        <div style="font-size: 20px; padding-bottom: 20px;">0.0006 <span class='BTC'></span></div>
         <div>Total Cost:</div> 
-        <div style="font-size: 20px; padding-bottom: 20px; font-weight: bold;"><span id="dialogBtcpay-costandfees"></span> <span class='BTC'>BTC</span></div>
+        <div style="font-size: 20px; padding-bottom: 20px; font-weight: bold;"><span id="dialogBtcpay-costandfees"></span> <span class='BTC'></span></div>
     </div>
 </div>
