--- a/html/dialog-btcpay.html
+++ b/html/dialog-btcpay.html
@@ -9,7 +9,7 @@
     <div id="dialogBtcpay-body" class="row" style="" align="center">
     <!--
         <div>Total Cost:</div> 
-        <div style="font-size: 24px"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'>BTC</span></div>
+        <div style="font-size: 24px"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'></span></div>
     -->
          <div>Asset Cost:</div> 
          <div style="font-size: 24px; padding-bottom: 20px;"><span id="dialogBtcpay-btctotal"></span> <span class='BTC'></span></div>
