--- a/html/table-matches.html
+++ b/html/table-matches.html
@@ -5,7 +5,7 @@
         <th class='matchesTable hideVerySmall hideLarge'>Block Index</th>
         <th>Asset Name</th>
         <th>Qty</th>
-        <th class='matchesTable hideVerySmall'>Cost (<span class='BTC'>MONA</span>)</th>
+        <th class='matchesTable hideVerySmall'>Cost (<span class='BTC'></span>)</th>
         <th class='matchesTable hideSmall hideLarge'>Time Left</th>
     </thead>
     <tbody>
