--- a/html/orderstable.html
+++ b/html/orderstable.html
@@ -3,7 +3,7 @@
     <thead>
         <th class='ordersTable hideSmall'>Status</th>
         <th>Asset Name</th>
-        <th><span class='BTC'>MONA</span>/Asset</th>
+        <th><span class='BTC'></span>/Asset</th>
         <th class='ordersTable hideVerySmall'>Qty Left</th>
 <!--        <th class='ordersTable hideSmall hideLarge'>Blocks Remaining</th> -->
         <th class='ordersTable hideSmall hideLarge'>Time Left</th>
