--- a/html/dialog-send-asset.html
+++ b/html/dialog-send-asset.html
@@ -17,5 +17,5 @@
   </fieldset>
 </form>
 
-<div align="center">Network fee of 0.0001 <span class="BTC">BTC</span></div>
+<div align="center">Network fee of 0.0001 <span class="BTC"></span></div>
 </div>
